# palattice

./: .gitignore  AccElements.cpp  AccElements.hpp  AccIterator.cpp  AccIterator.hpp  AccIterator.hxx  AccIterator.org  AccLattice.cpp  AccLattice.hpp  CMakeLists.txt  ELSASpuren.cpp  ELSASpuren.hpp  ELSAimport.cpp  ELSAimport.hpp  Field.cpp  Field.hpp  FunctionOfPos.cpp  FunctionOfPos.hpp  FunctionOfPos.hxx  Interpolate.cpp  Interpolate.hpp  Interpolate.hxx  Makefile  Metadata.cpp  Metadata.hpp  Metadata.hxx  README  README.md  ResStrengths.cpp  ResStrengths.hpp  SimTools.cpp  SimTools.hpp  Spectrum.cpp  Spectrum.hpp  config.hpp  constants.hpp  convertlattice.cpp  difference.cpp  difference.hpp  exportfile.cpp  (+46 more)
libpal/: Field.cpp  Field.hpp  FunctionOfPos.cpp  FunctionOfPos.hxx  Interpolate.cpp  Interpolate.hpp  Makefile  Metadata.cpp  Spectrum.hpp
madx-input/: elsa_test.madx
programs/: CMakeLists.txt  Makefile  convertlattice.cpp  fields.cpp  fields.gp  interptwiss.cpp  interptwiss.gp  lattice.cpp
simTools/: elegant2libpal.sh  elegant2libpalattice.sh  libpal.ele  libpal.madx  libpal_twissonly.madx  libpalattice.ele  libpalattice.madx  libpalattice_twissonly.madx
tests/: CMakeLists.txt  Makefile  elsa.lte  test-AccIterator.cpp  test-EnergyRamp.cpp  test-newLatticeFeatures.cpp  test-sdds.clo  test-sdds.cpp  test-sdds.twi  test-sdds.w  test-syli.cpp
